Update popup/settings headers and bump version

--- a/chrome-extension/src/options.html
+++ b/chrome-extension/src/options.html
@@ -11,7 +11,10 @@
     <div class="container">
         <header>
             <div class="header-row">
-                <h1 data-i18n="optionsTitle">Video Gear 設定</h1>
+                <div class="header-title">
+                    <img class="logo-icon" src="../icons/icon48.png" alt="Video Gear logo">
+                    <h1 data-i18n="optionsTitle">Video Gear 設定</h1>
+                </div>
                 <button type="button" id="options-lang-toggle" class="secondary-btn" data-i18n="langToggleLabel">EN</button>
             </div>
         </header>
