--- a/chrome-extension/src/popup.html
+++ b/chrome-extension/src/popup.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <span class="icon">⚡</span>
+                <img class="logo-icon" src="../icons/icon48.png" alt="Video Gear logo">
                 <h1 data-i18n="popupTitle">Video Gear</h1>
             </div>
             <div class="header-actions">
